[project]
name = "bunyan-formatter"
version = "0.1.0"
description = "Bunyan Formatter for Python"
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
authors = [{ name = "Kristofers Solo", email = "dev@kristofers.xyz" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bunyan_formatter"]
